# inv-management-system

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
api/: Cargo.toml
api/src/: lib.rs  main.rs
api/src/rest/auth/: dto.rs  handler.rs
api/src/rest/material/: dto.rs  handler.rs
api/src/rest/middleware/: auth.rs
api/src/rest/role/: dto.rs  handler.rs
api/src/rest/supplier/: dto.rs  handler.rs
api/src/rest/user/: dto.rs  (+1 more)
api/src/util/: error.rs  res.rs  validation.rs
lib/: Cargo.toml
lib/.sqlx/: query-0fb722e11649e52acdc7d23f889cde619caad2d6692bbfc6e0e17369b75a0c6e.json  query-105ded45d1aa414f7da44d8bc0c5d366611e44719c4971d57ee0f3eaf09221eb.json  query-14a924490936a08b8e87b919760787f411ce0ffda0db6562639a4b0509718c8d.json  query-1f2cef89d58ec11125d880e8e85a3cf41b59df3f76686c990ccbdc6e5044bec9.json  query-20e6835fef95fd493a406d06159c9c583171910725ca1e7673499a4f57151cac.json  query-94a448ed8f258e45d3c6855c3691a0dbda217b0baec8b3357adf6e53ccfd706f.json  query-badc8b1997fdbb4109b849a0763c6ef348e76dd40f9342f6628df4521fbca894.json  query-db5c0fc7759545bd26b1f6a014a54215a5217cf5be999e1210690aedd695f725.json  query-e6d7d60bc22e42dbb0f8b5ae567040b162b558c7e443b8d9eddeea64a38488ae.json  query-fb09951e73150641cd1eda3ae23d8e089356f6d88511aee06292b3d76b792e22.json
lib/src/: app_ctx.rs  lib.rs
lib/src/auth/: auth.rs  model.rs  repository.rs  use_case.rs
lib/src/material/: material.rs  model.rs  repository.rs  use_case.rs
lib/src/role/: entity.rs  model.rs  repository.rs  role.rs  use_case.rs
lib/src/supplier/: model.rs  repository.rs  supplier.rs  use_case.rs
lib/src/user/: model.rs  repository.rs  use_case.rs  user.rs
lib/src/util/: error.rs  postgres.rs
(+9 files in other folders)
