[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.79"
config = { path = "../config" }
lib = { path = "../lib" }
axum = "0.7.4"
chrono = { version = "0.4.34", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
thiserror = "1.0.57"
tower = { version = "0.4.13", features = ["full"] }
futures-util = "0.3.30"
serde_json = "1.0.115"
tower-http = { version = "0.5.2", features = ["cors"] }
sqlx = { version = "0.7.4", features = [
  "runtime-tokio-native-tls",
  "json",
  "postgres",
  "time",
] }
validator = { version = "0.18.1", features = ["derive"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
regex = "1.5.4"
once_cell = "1.8.0"
jsonwebtoken = "9.3.0"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
