[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
async-trait = "0.1.79"
itertools = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.57"
sqlx = { version = "0.7.4", features = [
  "runtime-tokio-native-tls",
  "json",
  "postgres",
  "time",
  "uuid",
  "chrono",
] }
serde_json = "1.0.117"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
